--- a/scripts/quick-run/merge-devnets/docker-compose.geth.yml
+++ b/scripts/quick-run/merge-devnets/docker-compose.geth.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 services:
   init_geth:
-    image: parithoshj/geth:merge-f72c361
+    image: parithoshj/geth:merge-b951e9c
     container_name: geth_init
     volumes:
       - ./execution_data:/execution_data
@@ -10,7 +10,7 @@ services:
       --datadir=/execution_data init /custom_config_data/genesis.json
     network_mode: host
   geth:
-    image: parithoshj/geth:merge-d99ac5a
+    image: parithoshj/geth:merge-b951e9c
     container_name: geth
     ports:
       - "8545:8545"
@@ -19,7 +19,7 @@ services:
     volumes:
       - ./execution_data:/execution_data
     command: >
-      --datadir=/execution_data --networkid=$NETWORK_ID --catalyst --http
+      --datadir=/execution_data --networkid=$NETWORK_ID --http
       --http.api "engine,net,eth" --ws --ws.api "engine,net,eth" --allow-insecure-unlock
       --nat extip:$IP_ADDRESS --bootnodes=$ENODE
     network_mode: host
